--- a/vendor.css
+++ b/vendor.css
@@ -1,9 +1,4 @@
-/* =================================================================== 
- *  Ceevee Vendor/Third Party CSS
- *  Template Ver. 2.0.0 
- *  01-03-2021
- *  ------------------------------------------------------------------
- *
+/*
  * TOC:
  * # PrismJS 1.20.0 
  * # Swiper 6.4.5
